--- a/Your Vocabulary/Views/Statistic.storyboard
+++ b/Your Vocabulary/Views/Statistic.storyboard
@@ -5,8 +5,10 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,6 +23,29 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="OyU-wc-w9w">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="kfF-QB-Lx2">
+                                <rect key="frame" x="20" y="248" width="335" height="236"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="statistic-chart" translatesAutoresizingMaskIntoConstraints="NO" id="yYV-nA-xmQ">
+                                        <rect key="frame" x="75" y="0.0" width="185" height="185"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="yYV-nA-xmQ" secondAttribute="height" multiplier="1:1" id="69O-bn-b84"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No quizzes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="epn-zL-kkm">
+                                        <rect key="frame" x="123.5" y="193" width="88" height="20.5"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                        <color key="textColor" red="0.16862745100000001" green="0.27058823529999998" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No one quiz wasn't passed." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ry1-fH-mOA">
+                                        <rect key="frame" x="90" y="221.5" width="155" height="14.5"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                        <color key="textColor" red="0.16862745100000001" green="0.27058823529999998" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="52t-n8-HSy">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <subviews>
@@ -104,7 +129,10 @@
                             <constraint firstItem="N2d-vu-Xvp" firstAttribute="bottom" secondItem="52t-n8-HSy" secondAttribute="bottom" id="40y-tI-4Kc"/>
                             <constraint firstItem="52t-n8-HSy" firstAttribute="top" secondItem="N2d-vu-Xvp" secondAttribute="top" id="9mj-Vb-TLF"/>
                             <constraint firstItem="52t-n8-HSy" firstAttribute="leading" secondItem="N2d-vu-Xvp" secondAttribute="leading" id="Gy5-J5-z4I"/>
+                            <constraint firstItem="kfF-QB-Lx2" firstAttribute="centerY" secondItem="N2d-vu-Xvp" secondAttribute="centerY" id="HnN-jX-EXE"/>
+                            <constraint firstItem="N2d-vu-Xvp" firstAttribute="trailing" secondItem="kfF-QB-Lx2" secondAttribute="trailing" constant="20" id="OAc-xu-W5y"/>
                             <constraint firstItem="OyU-wc-w9w" firstAttribute="top" secondItem="Phr-zT-RDY" secondAttribute="top" id="VWY-1c-yiR"/>
+                            <constraint firstItem="kfF-QB-Lx2" firstAttribute="leading" secondItem="N2d-vu-Xvp" secondAttribute="leading" constant="20" id="X5b-a2-bVN"/>
                             <constraint firstItem="OyU-wc-w9w" firstAttribute="leading" secondItem="N2d-vu-Xvp" secondAttribute="leading" id="asB-QX-fxG"/>
                             <constraint firstItem="OyU-wc-w9w" firstAttribute="bottom" secondItem="N2d-vu-Xvp" secondAttribute="bottom" id="bWG-1B-Vp3"/>
                             <constraint firstItem="N2d-vu-Xvp" firstAttribute="trailing" secondItem="52t-n8-HSy" secondAttribute="trailing" id="v0T-5Q-0RW"/>
@@ -113,8 +141,10 @@
                     </view>
                     <navigationItem key="navigationItem" title="Statistic" id="gaa-gZ-OvQ"/>
                     <connections>
+                        <outlet property="StatisticInfoStack" destination="52t-n8-HSy" id="ixa-06-Oea"/>
                         <outlet property="combinedChart" destination="fMn-ha-zik" id="LCW-vt-Iyq"/>
                         <outlet property="dictionaryPicker" destination="ZhR-zu-K1x" id="GKm-yI-P2L"/>
+                        <outlet property="noQuizzesStack" destination="kfF-QB-Lx2" id="Dmc-sC-ByB"/>
                         <outlet property="statisticTableView" destination="Vfr-EL-Li7" id="4TM-1c-v13"/>
                     </connections>
                 </viewController>
@@ -153,6 +183,7 @@
     </scenes>
     <resources>
         <image name="bg" width="1243" height="2209"/>
+        <image name="statistic-chart" width="185" height="184"/>
         <image name="statistics_tb" width="26" height="26"/>
         <image name="statistics_tb_selected" width="26" height="26"/>
     </resources>
